--- a/public/wish.html
+++ b/public/wish.html
@@ -12,8 +12,15 @@
 
   <link rel="stylesheet" href="stylesheets/style.css">
 
+  <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+  <!-- AngularJS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+  <!-- AngularFire -->
+  <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
+  <!-- Your Javascript -->
+  <script src="javascripts/script.js"></script>
+
 <script>
   // Initialize Firebase
   var config = {
@@ -31,28 +38,15 @@
     /**
      * Function called when clicking the Login/Logout button.
      */
-    // [START buttoncallback]
     function toggleSignIn() {
       if (!firebase.auth().currentUser) {
-        // [START createprovider]
         var provider = new firebase.auth.GithubAuthProvider();
-        // [END createprovider]
-        // [START addscopes]
-        provider.addScope('repo');
-        // [END addscopes]
-        // [START signin]
         firebase.auth().signInWithRedirect(provider);
-        // [END signin]
       } else {
-        // [START signout]
         firebase.auth().signOut();
-        // [END signout]
       }
-      // [START_EXCLUDE]
       document.getElementById('quickstart-sign-in').disabled = true;
-      // [END_EXCLUDE]
     }
-    // [END buttoncallback]
     /**
      * initApp handles setting up UI event listeners and registering Firebase auth listeners:
      *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
@@ -62,17 +56,7 @@
      */
     function initApp() {
       // Result from Redirect auth flow.
-      // [START getidptoken]
       firebase.auth().getRedirectResult().then(function(result) {
-        if (result.credential) {
-          // This gives you a GitHub Access Token. You can use it to access the GitHub API.
-          var token = result.credential.accessToken;
-          // [START_EXCLUDE]
-          //document.getElementById('quickstart-oauthtoken').textContent = token;
-        } else {
-          //document.getElementById('quickstart-oauthtoken').textContent = 'null';
-          // [END_EXCLUDE]
-        }
         // The signed-in user info.
         var user = result.user;
       }).catch(function(error) {
@@ -83,7 +67,6 @@
         var email = error.email;
         // The firebase.auth.AuthCredential type that was used.
         var credential = error.credential;
-        // [START_EXCLUDE]
         if (errorCode === 'auth/account-exists-with-different-credential') {
           alert('You have already signed up with a different auth provider for that email.');
           // If you are using multiple auth providers on your app you should handle linking
@@ -91,11 +74,8 @@
         } else {
           console.error(error);
         }
-        // [END_EXCLUDE]
       });
-      // [END getidptoken]
       // Listening for auth state changes.
-      // [START authstatelistener]
       firebase.auth().onAuthStateChanged(function(user) {
         if (user) {
           // User is signed in.
@@ -106,25 +86,15 @@
           var isAnonymous = user.isAnonymous;
           var uid = user.uid;
           var providerData = user.providerData;
-          // [START_EXCLUDE]
           document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
           document.getElementById('quickstart-sign-in').textContent = 'Sign out';
-          //document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
-          // [END_EXCLUDE]
         } else {
           // User is signed out.
-          // [START_EXCLUDE]
           document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
           document.getElementById('quickstart-sign-in').textContent = 'Sign in with GitHub';
-          //document.getElementById('quickstart-account-details').textContent = 'null';
-          //document.getElementById('quickstart-oauthtoken').textContent = 'null';
-          // [END_EXCLUDE]
         }
-        // [START_EXCLUDE]
         document.getElementById('quickstart-sign-in').disabled = false;
-        // [END_EXCLUDE]
       });
-      // [END authstatelistener]
       document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
     }
     window.onload = function() {
@@ -134,7 +104,7 @@
 </head>
 
 
-<body>
+<body ng-app="myApp" ng-controller="myCtrl">
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
   <!-- Header section containing title -->
@@ -161,7 +131,7 @@
           <!-- Container where we'll display the user details -->
           <div class="quickstart-user-details-container">
             Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-
+            <p>{{test}}</p>
           </div>
         </div>
       </div>
