--- a/public/wish.html
+++ b/public/wish.html
@@ -18,8 +18,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
   <!-- AngularFire -->
   <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
-  <!-- Your Javascript -->
-  <script src="javascripts/script.js"></script>
 
 <script>
   // Initialize Firebase
@@ -34,73 +32,9 @@
   firebase.initializeApp(config);
 </script>
 
-  <script type="text/javascript">
-    /**
-     * Function called when clicking the Login/Logout button.
-     */
-    function toggleSignIn() {
-      if (!firebase.auth().currentUser) {
-        var provider = new firebase.auth.GithubAuthProvider();
-        firebase.auth().signInWithRedirect(provider);
-      } else {
-        firebase.auth().signOut();
-      }
-      document.getElementById('quickstart-sign-in').disabled = true;
-    }
-    /**
-     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
-     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
-     *    out, and that is where we update the UI.
-     *  - firebase.auth().getRedirectResult(): This promise completes when the user gets back from
-     *    the auth redirect flow. It is where you can get the OAuth access token from the IDP.
-     */
-    function initApp() {
-      // Result from Redirect auth flow.
-      firebase.auth().getRedirectResult().then(function(result) {
-        // The signed-in user info.
-        var user = result.user;
-      }).catch(function(error) {
-        // Handle Errors here.
-        var errorCode = error.code;
-        var errorMessage = error.message;
-        // The email of the user's account used.
-        var email = error.email;
-        // The firebase.auth.AuthCredential type that was used.
-        var credential = error.credential;
-        if (errorCode === 'auth/account-exists-with-different-credential') {
-          alert('You have already signed up with a different auth provider for that email.');
-          // If you are using multiple auth providers on your app you should handle linking
-          // the user's accounts here.
-        } else {
-          console.error(error);
-        }
-      });
-      // Listening for auth state changes.
-      firebase.auth().onAuthStateChanged(function(user) {
-        if (user) {
-          // User is signed in.
-          var displayName = user.displayName;
-          var email = user.email;
-          var emailVerified = user.emailVerified;
-          var photoURL = user.photoURL;
-          var isAnonymous = user.isAnonymous;
-          var uid = user.uid;
-          var providerData = user.providerData;
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
-          document.getElementById('quickstart-sign-in').textContent = 'Sign out';
-        } else {
-          // User is signed out.
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
-          document.getElementById('quickstart-sign-in').textContent = 'Sign in with GitHub';
-        }
-        document.getElementById('quickstart-sign-in').disabled = false;
-      });
-      document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
-    }
-    window.onload = function() {
-      initApp();
-    };
-  </script>
+    <!-- Your Javascript -->
+    <script src="javascripts/script.js"></script>
+
 </head>
 
 
@@ -126,11 +60,11 @@
           <p>Sign in with your GitHub account below.</p>
 
           <!-- Button that handles sign-in/sign-out -->
-          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Sign in with GitHub</button>
+          <button ng-disabled="signingIn" ng-click="toggleSignIn()" class="mdl-button mdl-js-button mdl-button--raised">Sign in/out with GitHub</button>
 
           <!-- Container where we'll display the user details -->
           <div class="quickstart-user-details-container">
-            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
+            Firebase sign-in status: <span id="quickstart-sign-in-status">{{signInStatus}}</span>
             <p>{{test}}</p>
           </div>
         </div>
