--- a/public/wish.html
+++ b/public/wish.html
@@ -12,15 +12,8 @@
 
   <link rel="stylesheet" href="stylesheets/style.css">
 
-  <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
 
-  <!-- AngularJS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-  <!-- AngularFire -->
-  <script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
-  <!-- Your Javascript -->
-  <script src="javascripts/script.js"></script>
-
+<script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
 <script>
   // Initialize Firebase
   var config = {
@@ -38,15 +31,28 @@
     /**
      * Function called when clicking the Login/Logout button.
      */
+    // [START buttoncallback]
     function toggleSignIn() {
       if (!firebase.auth().currentUser) {
+        // [START createprovider]
         var provider = new firebase.auth.GithubAuthProvider();
+        // [END createprovider]
+        // [START addscopes]
+        provider.addScope('repo');
+        // [END addscopes]
+        // [START signin]
         firebase.auth().signInWithRedirect(provider);
+        // [END signin]
       } else {
+        // [START signout]
         firebase.auth().signOut();
+        // [END signout]
       }
+      // [START_EXCLUDE]
       document.getElementById('quickstart-sign-in').disabled = true;
+      // [END_EXCLUDE]
     }
+    // [END buttoncallback]
     /**
      * initApp handles setting up UI event listeners and registering Firebase auth listeners:
      *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
@@ -56,7 +62,17 @@
      */
     function initApp() {
       // Result from Redirect auth flow.
+      // [START getidptoken]
       firebase.auth().getRedirectResult().then(function(result) {
+        if (result.credential) {
+          // This gives you a GitHub Access Token. You can use it to access the GitHub API.
+          var token = result.credential.accessToken;
+          // [START_EXCLUDE]
+          //document.getElementById('quickstart-oauthtoken').textContent = token;
+        } else {
+          //document.getElementById('quickstart-oauthtoken').textContent = 'null';
+          // [END_EXCLUDE]
+        }
         // The signed-in user info.
         var user = result.user;
       }).catch(function(error) {
@@ -67,6 +83,7 @@
         var email = error.email;
         // The firebase.auth.AuthCredential type that was used.
         var credential = error.credential;
+        // [START_EXCLUDE]
         if (errorCode === 'auth/account-exists-with-different-credential') {
           alert('You have already signed up with a different auth provider for that email.');
           // If you are using multiple auth providers on your app you should handle linking
@@ -74,8 +91,11 @@
         } else {
           console.error(error);
         }
+        // [END_EXCLUDE]
       });
+      // [END getidptoken]
       // Listening for auth state changes.
+      // [START authstatelistener]
       firebase.auth().onAuthStateChanged(function(user) {
         if (user) {
           // User is signed in.
@@ -86,15 +106,25 @@
           var isAnonymous = user.isAnonymous;
           var uid = user.uid;
           var providerData = user.providerData;
+          // [START_EXCLUDE]
           document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
           document.getElementById('quickstart-sign-in').textContent = 'Sign out';
+          //document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
+          // [END_EXCLUDE]
         } else {
           // User is signed out.
+          // [START_EXCLUDE]
           document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
           document.getElementById('quickstart-sign-in').textContent = 'Sign in with GitHub';
+          //document.getElementById('quickstart-account-details').textContent = 'null';
+          //document.getElementById('quickstart-oauthtoken').textContent = 'null';
+          // [END_EXCLUDE]
         }
+        // [START_EXCLUDE]
         document.getElementById('quickstart-sign-in').disabled = false;
+        // [END_EXCLUDE]
       });
+      // [END authstatelistener]
       document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
     }
     window.onload = function() {
@@ -104,23 +134,20 @@
 </head>
 
 
-<body ng-app="myApp" ng-controller="myCtrl">
+<body>
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
   <!-- Header section containing title -->
   <header class="mdl-layout__header mdl-color-text--white mdl-color--red-600">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
       <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <h3>Wish List Creator</h3>
+        <img src="images/Santa-clipart.png" height="50px"/>
+	<h3>Wish List Creator</h3>
+        <img src="images/Santa-clipart2.png" height="50px"/>
       </div>
     </div>
   </header>
 
-<form ng-submit="addItem()" ng-if="user">
-  Item: <input type="text" ng-model="formName"></input></br>
-  URL to Item: <input type="text" ng-model="formPicture"></input>
-    <button type="submit">Add Item to Wish List</button>
-</form>
 
   <main class="mdl-layout__content mdl-color--grey-100">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
@@ -137,7 +164,12 @@
           <!-- Container where we'll display the user details -->
           <div class="quickstart-user-details-container">
             Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <p>{{test}}</p>
+
+		<form ng-submit="addItem()" ng-if="user">
+  		Item:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&thinsp;&thinsp;&thinsp; <input type="text" ng-model="formName"></input></br>
+ 		URL to Item: <input type="text" ng-model="formPicture"></input>
+    		<button type="submit">Add Item to Wish List</button>
+		</form>
           </div>
         </div>
       </div>
