--- a/public/wish.html
+++ b/public/wish.html
@@ -73,7 +73,7 @@
 		<form ng-submit="addItem()" ng-show="user">
   		Item:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&thinsp;&thinsp;&thinsp;
 		<input type="text" ng-model="formName"></input></br>
-		URL to Item: <input type="text" ng-model="formURL"></input>
+		URL to Item: <input title="Don't forget http://" type="url" type="text" ng-model="formURL"></input>
     		<button type="submit">Add Item to Wish List</button>
 		</form>
 
