--- a/public/wish.html
+++ b/public/wish.html
@@ -87,12 +87,12 @@
 		<h1 ng-if="user">Current Wish List</h1>
 		<div ng-if="user" ng-repeat="item in wishlist | orderBy:['name']">
 		<span class="glyphicon glyphicon-remove" ng-click="delete(item)"></span>
-  		{{item.name}}<span ng-if="item.URL">(<a target="_blank" ng-href="{{item.URL}}">Link</a>)</span>
+  		{{item.name}}<span ng-if="item.URL"> (<a target="_blank" ng-href="{{item.URL}}">Link</a>)</span>
 		</div>
           </div>
 
           <hr ng-if="user"/>
-          <a ng-if="user" ng-href="view/{{user.uid}}">View your wishlist. (Share this link with anyone!)</a>
+          <a ng-if="user" target="_blank" ng-href="view/{{user.uid}}">View your wishlist. (Share this link with anyone!)</a>
         </div>
       </div>
     </div>
